src/compiler/snapshots/alma__compiler__tests__Direct dependency module cycle.snap
---
source: src/compiler/mod.rs
assertion_line: 220
expression: "compile(&[r\"\nmodule Test\n\nimport Test.TestInner\n\n\nmodule Test.TestInner\n    import Test\n        \"])"
---
Cycle detected between modules:

    Test
        ↓
    Test.TestInner
        ↓
    Test

Alma's module system does not support cyclic dependencies.
