src/compiler/snapshots/alma__compiler__tests__Normal module dependency chain.snap
---
source: src/compiler/mod.rs
assertion_line: 198
expression: "compile(&[r\"\nmodule Test exposing (main)\n\nimport Test.WeirdMath exposing (weirdAdd)\n\nmain = weirdAdd\n\n\n\nmodule Test.Constants exposing (five)\n\n    five = 5\n\n\n\nmodule Test.WeirdMath exposing (weirdAdd)\n\n    import Test.Constants exposing (five)\n\n    weirdAdd = \\x y -> x * y + five\n        \"])"
---
// alma_out/Alma.ffi.js

export const or_ = (x, y) => x || y;
export const and_ = (x, y) => x && y;

export const eq = (x, y) => x === y;
export const ne = (x, y) => x !== y;

export const gt = (x, y) => x > y;
export const ge = (x, y) => x >= y;
export const lt = (x, y) => x < y;
export const le = (x, y) => x <= y;

export const add = (x, y) => x + y;
export const sub = (x, y) => x - y;
export const mult = (x, y) => x * y;
export const div = (x, y) => x / y;

export const Bool__True = true;
export const Bool__False = false;



// alma_out/Alma.js

/*

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float

*/


import * as Alma__ffi from "./Alma.ffi.js"


// type Bool

let True = Alma__ffi.Bool__True

let False = Alma__ffi.Bool__False


let or_ = Alma__ffi.or_

let and_ = Alma__ffi.and_

let eq = Alma__ffi.eq

let ne = Alma__ffi.ne

let gt = Alma__ffi.gt

let ge = Alma__ffi.ge

let lt = Alma__ffi.lt

let le = Alma__ffi.le

let add = Alma__ffi.add

let sub = Alma__ffi.sub

let mult = Alma__ffi.mult

let div = Alma__ffi.div

export {
    // type Bool
    True,
    False,
    or_,
    and_,
    eq,
    ne,
    gt,
    ge,
    lt,
    le,
    add,
    sub,
    mult,
    div,
}



// alma_out/Test.Constants.js

/*

module Test.Constants

five : ∀ ∅ . Float

*/



import * as Alma from "./Alma.js"
import { True, False } from "./Alma.js"

let five = 5

export {
    five,
}



// alma_out/Test.WeirdMath.js

/*

module Test.WeirdMath

weirdAdd : ∀ ∅ . Float -> Float -> Float

*/



import * as Alma from "./Alma.js"
import { True, False } from "./Alma.js"
import * as Test__Constants from "./Test.Constants.js"
import { five } from "./Test.Constants.js"

let weirdAdd = function (x, y) {
    return ((x * y) + five)
}

export {
    weirdAdd,
}



// alma_out/Test.js

/*

module Test

main : ∀ ∅ . Float -> Float -> Float

*/



import * as Alma from "./Alma.js"
import { True, False } from "./Alma.js"
import * as Test__WeirdMath from "./Test.WeirdMath.js"
import { weirdAdd } from "./Test.WeirdMath.js"

let main = weirdAdd

export {
    main,
}




